# Learning

./: .gitignore  .gitignore~  README.md
C/: linked_lists_with_H.c
C++/: test_cpp.cc
C++/C++ Primer 5th ed/Ch 1 - Getting Started/: 1_to_10.cc  add_items.cc  sum_of_any_number_of_numbers.cc
C++/C++ Primer 5th ed/Ch 10 - Generic Algorithms/: accumulate_istream_iterators.cc  count_apparitions.cc  elim_dups.cc  partition_and_bind.cc  read_cin_using_iterators.cc  sum_with_lambda.cc
C++/C++ Primer 5th ed/Ch 11 - Associative Containers/: map_of_family.cc  vector_of_read_pairs.cc
C++/C++ Primer 5th ed/Ch 12 - Dynamic Memory/: init_print_dynamic_vector.cc  open_close_connection_using_shared_ptr_and_lambda.cc
C++/C++ Primer 5th ed/Ch 13 - Copy & Move Control/: defining_some_copy_control_members.cc  simple_copy_constructor.cc  understanding_the_copy_constructor.cc
C++/C++ Primer 5th ed/Ch 14 - Overloaded Operations and/String Lenght using Functors/: CMakeLists.txt  SizeTest.h
C++/C++ Primer 5th ed/Ch 15 - Object-Oriented Programming/Conversion Tests/: CMakeLists.txt  TestClasses.h
C++/C++ Primer 5th ed/Ch 16 -  Templates and Generic Programming/Find/: CMakeLists.txt  Find.h  Find.tpp  main.cpp
C++/C++ Primer 5th ed/Ch 16 -  Templates and Generic Programming/Pack Expansion/: CMakeLists.txt  Util.h  Util.tpp  main.cpp
C++/C++ Primer 5th ed/Ch 16 -  Templates and Generic Programming/Screen/: CMakeLists.txt  Screen.cpp  Screen.h  Screen.sln  Screen.tpp  Screen.vcxproj  Screen.vcxproj.filters  main.cpp
C++/C++ Primer 5th ed/Ch 17 -  Specialized Library Facilities/Copying Bits Between Bitsets/: CMakeLists.txt  Util.cpp  Util.h  main.cpp
C++/C++ Primer 5th ed/Ch 17 -  Specialized Library Facilities/Quiz Using Bitsets/: CMakeLists.txt  Trivia.cpp  Trivia.h  main.cpp
C++/C++ Primer 5th ed/Ch 17 -  Specialized Library Facilities/Simple Tuple Usage/: CMakeLists.txt  main.cpp
C++/C++ Primer 5th ed/Ch 4 - Expressions/: const_cast.cc  (+2 more)
C++/C++ Primer 5th ed/Ch 7 - Classes/7.5_delegating_constructors/: CMakeLists.txt
C++/C++ Primer 5th ed/Ch 7 - Classes/ex7.1.4_Sales_data_w_constructors_added/: CMakeLists.txt  Person.hh
C++/Primer/Ch 12 - Dynamic Memory/Text Query Using Classes and shared_ptr/: CMakeLists.txt  main.cpp
C++/Primer/Ch 12/read_print_using_StrBlobs/: CMakeLists.txt  FileOperations.cpp  FileOperations.h  StringBlob.cpp  StringBlob.h  StringBlobPtr.cpp  StringBlobPtr.h  main.cc  random_text_file.txt
C++/Primer/Ch 13/Simplification of a vector of strings/: CMakeLists.txt  StrVec.cpp  StrVec.h  main.cpp
C++/Primer/Ch 13/Simplified string class/: CMakeLists.txt  String.cpp  String.h  main.cpp
C++/Primer/Ch 13/StrBlobPtr/: CMakeLists.txt  StrBlob.cpp  StrBlob.h  StrBlobPtr.cpp  StrBlobPtr.h  main.cpp
C++/Primer/Ch 13/Synthesized Copy Constructor vs Defined/: CMakeLists.txt  PrintFunction.cpp  main.cpp
C++/Primer/Ch 14/Sales_data/: CMakeLists.txt  Sales_data.cpp  Sales_data.h  main.cpp
C++/Primer/Ch 15/Book Sales Using Derivate Classes/: Basket.cpp  Basket.h  CMakeLists.txt  Functions.cpp  Functions.h  Person.h  Quote.h  main.cpp
C++/Primer/Ch 15/Inherited constructors w default arguments/: CMakeLists.txt  Classes.cpp
C++/Primer/Ch 15/Yet Another Text Querry/: AndQuery.cpp  AndQuery.h  CMakeLists.txt  GetUserInput.cpp  NotQuery.h  OrQuery.cpp  Query_base.cpp  Query_base.h  TextQuery.h  WordQuery.cpp  WordQuery.h
C++/Primer/Ch 16 -  Templates and Generic Programming/Print Array/: CMakeLists.txt  Print.h
C++/Primer/Ch 7 - Classes/7.5.6_Debug_ex/: CMakeLists.txt
C++/Primer/Ch 7/7.6_Bank(static members)/: Account.cpp  CMakeLists.txt  main.cpp
C++/Primer/Ch 7/ex7.3/Persons/: CMakeLists.txt  Person.h  main.cpp
C++/Primer/Ch 7/ex7.3/Screen/: CMakeLists.txt  Screen.cc  Window_mgr.cpp
C++/Primer/Ch 8/8.2.1_read_file_into_string/: CMakeLists.txt  Func.h  main.cpp
C++/Primer/Ch 8/save_phone_numbers_using_sstream/: CMakeLists.txt  FileChecks.cpp  FileChecks.h  main.cpp
C++/Stanford - Binary Trees/: maxDepth().cpp  minValue().cpp
C/C_programming.com/: 4_funct.c  is_negative.c  is_prime.c  output_triangle.c  raise_to_power.c
C/KR/: enum test.c  learning_time(variable_scope).c  limits.c
C/Reek/: test1.c
C/Reek - Pointers On C/: E3_childs_time.c  enum.c  hello.c
C/Stanford - Linked Lists/: CopyList.c  add_new_node_before_head.c  append_with_push.c  build_one_two_three.c  lenght.c  pointers_default_pointee_based_on_type_of_memory.c  push.c  push_at_head.c  put_at_tail.c
Random/: CMakeLists.txt  age.c  binary_to_decimal.c  build_one_two_three.c  decimal_to_binary.c  guessing.c  input to ascii.c  lotto-test (conflict 2014-12-01-09-37-57).c  my_b2d.c  my_d2b.c  mystrcat.c  poem.c  search_with_callback_function.c  strlcpy_and_strlcat.c  stupid_mem_allocation.c  test_cpp.cc
Random /: bitwise_operators.c  dynamic_allocated_array.c  functions_tests.c  grading.c  lotto-test.c  output_triangle.c  pointers.c  students.h
Random /Start a prog in another terminal/: C - Compile _ Run_Debug.sublime-build  cboard.c~  ceva.c
Random/Anonimize password read from cin/: CMakeLists.txt  hello.txt  main.cpp
Random/Codility - Equilibrum Index/: CMakeLists.txt  main.cpp
Random/Concatenate two vectors in a set/: CMakeLists.txt  main.cpp  text.txt
Random/Decimal to Hex Converter/: CMakeLists.txt  Converter.h  Converter.tpp  main.cpp
Random/Identical Substrings in Read Text/: CMakeLists.txt  Util.cpp  Util.h  main.cpp
Random/KR/: enum test.c  learning_time(variable_scope).c  limits.c
Random/Mammals Ancestor/: Mammals Ancestor.sln
Random/Simple Random Generator App/: Simple Random Generator App.sln
Random/Start a prog in another terminal/: ceva.c~  test.c  test.c~
Random/Store Exam Pass As Bit/: CMakeLists.txt  main.cpp
Start a prog in another terminal/: C++ - Compile _ Run.sublime-build
W_H/: 2015.02.15-vitantis-pointers.c  pointers_ex_w_H.c
W_H/Cars_test_w_H/: CMakeLists.txt  Car.hh
W_H/DateCalculator/: CMakeLists.txt  Functions.cpp  Functions.h  main.cpp
W_H/destructors_example/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
(+1249 files in other folders)
