cmake_minimum_required(VERSION 3.2)
project(Text_Query_Using_Classes_and_shared_ptr)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
    -std=c++14 -Wall -Werror -Wextra -pedantic -Wshadow -Woverloaded-virtual \
    -Winvalid-pch -Wcast-align -Wformat=2 -Wformat-nonliteral \
    -Wmissing-declarations -Wmissing-format-attribute -Wmissing-include-dirs \
    -Wredundant-decls -Wswitch-default -Wswitch-enum")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})

set(SOURCE_FILES main.cpp QueryResult.cpp TextQuery.cpp
    GetUserInput.cpp StrVec.cpp)
add_executable(Text_Query_Using_Classes_and_shared_ptr ${SOURCE_FILES})